--- a/css/style.css
+++ b/css/style.css
@@ -740,3 +740,63 @@ section#blog {
 .home-post .post-meta span.tags a {
 	color:#fcfcfc;
 }
+
+/* === section about === */
+
+section#about {
+	background:#f2f2f2;
+}
+
+.people {
+	text-align:center;
+}
+
+.people h3 {
+	margin-bottom:10px;
+	font-weight:700;
+	letter-spacing:-1px;
+}
+
+.team-thumb {
+	margin-top: 26px;
+	text-align:center;
+}
+
+/* (spacer) latest tweet */
+#tweet{
+	text-align:center;
+	margin:20px 0 0;
+	font-size:20px;
+	color:#fff;
+}
+
+#tweet ul{
+	float:left;
+	width:100%;
+	text-align:center;
+	list-style:none;
+	margin:0;
+	padding:0;
+}
+
+#tweet ul li{
+	display: inline-block;
+	list-style:none;
+	margin:0 0 20px;
+	padding:0 0 0 34px;
+	font-size:20px;
+	line-height:1.5em;
+}
+
+#tweet ul li:before {
+	font-family: 'FontAwesome';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	content: "\f099";
+	margin-right:20px;
+}
